Higher contrast to filter UI text

--- a/css/layout/_controls.scss
+++ b/css/layout/_controls.scss
@@ -218,7 +218,7 @@ section#filters {
 		line-height: $base-spacing * 2 * 1.6129;
 		font-size: 0.62em;
 		font-weight: 200;
-		color: $medium-gray;
+		color: $dark-red;
 		text-transform: uppercase;
 		background: white;
 		border-bottom: 1px solid darken($super-light-gray, 5);
