--- a/css/base/_class-variables.scss
+++ b/css/base/_class-variables.scss
@@ -100,7 +100,7 @@
 		position: relative;
 		padding-top: 2.25em;
 		top: .75em;
-		color: $medium-gray;
+		color: $dark-red;
 		font-size: 0.62em;
 		text-transform: uppercase;
 		margin-bottom: -.375em;
