light blue correspond to zelezna-opona.cz now

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -26,7 +26,7 @@ $light-red: #946563;
 
 $dark-blue: #465957;
 $blue: #477dca;
-$light-blue: #698C89;
+$light-blue: #d2e7ef; // #698C89
 
 $dark-turqois: #35968F;
 $medium-turqois: #475957;
