--- a/css/layout/_mapbox.scss
+++ b/css/layout/_mapbox.scss
@@ -29,6 +29,21 @@
 		}
 	}
 
+	#number-markers {
+		overflow: hidden;
+		position: fixed;
+		top: $base-spacing * 5 + em(9);
+		right: 9px;
+		width: auto;
+		height: 28px;
+		line-height: 28px;
+		text-align: center;
+		padding: 0 $small-spacing;
+		background-color: white;
+		box-shadow: 1px 1px 3px rgba(0,0,0,0.11);
+		border-radius: $base-border-radius;
+	}
+
 	.infobox {
 		position: fixed;
 		z-index: 12;
