--- a/css/styles.css
+++ b/css/styles.css
@@ -1120,12 +1120,12 @@ section#filters {
     -moz-transition-timing-function: ease-in-out;
     transition-timing-function: ease-in-out; }
     section#filters .filters-wrapper::-webkit-scrollbar {
-      width: 0.1875em; }
+      width: 5px; }
     section#filters .filters-wrapper::-webkit-scrollbar-track {
-      border-radius: 10px;
+      border-radius: 2px;
       background: #eee; }
     section#filters .filters-wrapper::-webkit-scrollbar-thumb {
-      border-radius: 10px;
+      border-radius: 2px;
       background: #888; }
     section#filters .filters-wrapper::-webkit-scrollbar-thumb:window-inactive {
       background: rgba(100, 100, 100, 0.4); }
@@ -1684,15 +1684,13 @@ header.intro {
       scrollbar-face-color: #888;
       scrollbar-track-color: #eee; }
       .infobox .info .content::-webkit-scrollbar {
-        width: 0.1875em; }
+        width: 5px; }
       .infobox .info .content::-webkit-scrollbar-track {
-        border-radius: 10px;
+        border-radius: 2px;
         background: #eee; }
       .infobox .info .content::-webkit-scrollbar-thumb {
-        border-radius: 10px;
+        border-radius: 2px;
         background: #888; }
-      .infobox .info .content::-webkit-scrollbar-thumb:window-inactive {
-        background: rgba(100, 100, 100, 0.4); }
       .infobox .info .content > div {
         float: left;
         display: block;
