Disable tracking services & hide the welcome screen
undo this change when finished with this branch

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -5,6 +5,8 @@ header.intro {
 	width: 100%;
 	background: white;
 
+	display:none;
+
 	&:after {
 		opacity: 0;
 		@include transition-property(opacity);
