Rename id of print button

--- a/css/layout/_mapbox.scss
+++ b/css/layout/_mapbox.scss
@@ -27,7 +27,7 @@
 	margin: 0 auto;
 }
 
-#map-print {
+#print-button {
 	top: $base-spacing * 5 + em(9) + em(28) + em(9);
 	width: auto;
 	padding: 0 $small-spacing;
