--- a/css/styles.css
+++ b/css/styles.css
@@ -773,7 +773,7 @@ dl {
   #periods,
   #filters,
   #reset-view,
-  #map-print,
+  #print-button,
   #infobox,
   #print-infobox {
     display: none; }
@@ -790,30 +790,38 @@ dl {
     .print-container #map-canvas {
       height: 470px !important; }
     .print-container #print {
-      display: block;
       height: 200px !important;
       width: 100% !important;
       color: #000;
       padding: 1.5em;
       overflow: visible; }
-      .print-container #print > div {
+      .print-container #print > div:first-of-type {
+        padding-right: 0.75em; }
+      .print-container #print #list-of-filters {
         float: left;
         display: block;
         margin-right: 0%;
-        width: 50%; }
-        .print-container #print > div:last-child {
+        width: 33.33333%; }
+        .print-container #print #list-of-filters:last-child {
           margin-right: 0; }
-        .print-container #print > div:first-of-type {
-          padding-right: 0.75em; }
+      .print-container #print #print-infobox {
+        float: left;
+        display: block;
+        margin-right: 0%;
+        width: 66.66667%; }
+        .print-container #print #print-infobox:last-child {
+          margin-right: 0; }
     .print-container #print-infobox > div {
       float: left;
       display: block;
       margin-right: 0%;
-      width: 50%; }
+      width: 33.33333%; }
       .print-container #print-infobox > div:last-child {
         margin-right: 0; }
-      .print-container #print-infobox > div:first-of-type {
-        padding-right: 0.75em; }
+      .print-container #print-infobox > div:not(:last-of-type) {
+        padding-right: 10px; }
+    .print-container #print-infobox dl dd {
+      font-size: 10pt; }
     .print-container .active-markers #print-infobox {
       display: block; } }
 .left {
@@ -1673,7 +1681,7 @@ header.intro {
   width: 100%;
   margin: 0 auto; }
 
-#map-print {
+#print-button {
   top: 10.375em;
   width: auto;
   padding: 0 0.75em;
